--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <!-- </div> -->
     <div class="title">
       <!-- EDIT HERE -->
-      <h1 class="STARDUST2">Sera</h1>
-      <img class="img" src="EDIT_ME.png" alt="JUNO_OKYO" />
+      <h1 class="STARDUST2">Gift for you, Sera.</h1>
       <canvas id="pinkboard"></canvas>
     </div>
 
